# ptodo

./: .coveragerc  CONTRIBUTING.md  Makefile  README.md  app.py  mypy.ini  pytest.ini  requirements.txt  setup.cfg  setup.py
checks/: version_check.py
extras/: calc_todo_age.py  todoist_to_todo.py
ptodo/: __init__.py  app.py  config.py  core.py  git_service.py  serda.py  utils.py
ptodo/commands/: __init__.py  config_commands.py  git_commands.py  organization_commands.py  task_commands.py
ptodo/core/: __init__.py  core.py  serda.py
ptodo/utils/: __init__.py  deprecation.py
tests/: README.md  conftest.py  test_app.py  test_config_commands.py  test_git_commands.py  test_git_service_basic.py  test_git_service_commit.py  test_git_service_pull.py  test_git_service_push.py  test_git_service_remote.py  test_git_service_stage.py  test_git_service_sync.py  test_serda.py
tests/commands/: test_add_command.py  test_archive_command.py  test_await_command.py  test_contexts_command.py  test_done_command.py  test_due_command.py  test_edit_command.py  test_help_command.py  test_list_command.py  test_next_command.py  test_organization_commands.py  test_pri_command.py  test_projects_command.py  test_rm_command.py  test_show_command.py  test_sort_command.py
