[metadata]
name = ptodo
description = A todo.txt command-line application
author = ptodo developers
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    argparse
    python-dateutil

[options.extras_require]
dev =
    flake8
    mypy
    black
    isort
test =
    pytest
    pytest-cov
    coverage

[options.entry_points]
console_scripts =
    ptodo = ptodo.app:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = --verbose --cov=ptodo

[coverage:run]
source = ptodo
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .eggs,
    *.egg-info

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True


